Bug 684452 - Memory leak in nsEmlxHelperUtils::AddEmlxMessageToStream. r=bienvenu